# omnibioai_sdk

./: .gitignore  README.md  object_analysis.ipynb  pyproject.toml
.github/workflows/: ci-cd.yml
omnibioai_sdk/: __init__.py  client.py
omnibioai_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_client.py
