[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "omnibioai-sdk"                  # PyPI name
version = "0.1.1"
description = "Python SDK for OmniBioAI APIs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Manish Kumar" }]

dependencies = [
  "requests>=2.31.0"
]

keywords = ["bioinformatics", "sdk", "api", "omnibioai"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "responses>=0.25",
  "build>=1.2",
  "twine>=5.1"
]

[project.urls]
Homepage = "https://github.com/man4ish/omnibioai_sdk"
Source = "https://github.com/man4ish/omnibioai_sdk"
Issues = "https://github.com/man4ish/omnibioai_sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["omnibioai_sdk"]
